Fix more warnings + post-JSpecify cleanup